<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="28">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="@string/subIntent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="@string/registrationUser_intentName"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/username_etPD"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBlue"
        android:hint="@string/login_hintEditTextAndToast"/>
    <TextView
        android:id="@+id/username_registration_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:text="Mutqagrel normal email"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/password_etPD"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBlue"
        android:hint="@string/password_hintEditTextAndToast"/>
    <TextView
        android:id="@+id/password_registration_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:text="Mutqagrel normal password"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/repeat_password_etPD"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBlue"
        android:hint="@string/registrationUser_repeatPassword_hint"/>
    <TextView
        android:id="@+id/repeat_password_registration_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:text="Mutqagrel Normal krknvox pass"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/nickname_etPD"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBlue"
        android:hint="@string/registrationUser_nikname_hint"></EditText>
    <TextView
        android:id="@+id/nickname_registration_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:text="Mutqagrel normal nickname"
        android:textColor="@color/colorAccent"/>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:onClick="addProfilePicture"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlue"
            android:src="@mipmap/clip_profile_picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registrationUser_clipPicture"/>

    </LinearLayout>

    <LinearLayout

        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="18"
        android:gravity="center"
        >

        <Button
            android:id="@+id/registrationUser_btn"
            android:onClick="ok"
            android:layout_marginLeft="30dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:textSize="18dp"
            android:background="@color/colorRose"
            android:text="@string/registrationUser_positiveButton"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:onClick="cancel"
            android:layout_marginEnd="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="18dp"
            android:background="@color/colorRose"
            android:text="@string/registrationUser_negativeButton"
            android:layout_marginRight="30dp"/>


    </LinearLayout>


</LinearLayout>