<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="25"
    android:background="@mipmap/sky"
    >

    <ImageView
        android:id="@+id/plainSendEmail_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="invisible"
        android:src="@mipmap/plain_send_email"/>

    <EditText
        android:id="@+id/forgotPasswordPageSendEmail_et"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorBlue"
        android:hint="@string/login_hintEditTextAndToast"
        >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/forgotPasswordPageSendEmailRegularExpression_tv"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:weightSum="30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forgotPasswordPageSendEmail_btn"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:background="@color/colorRose"
            android:text="@string/sendEmail_positiveButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:onClick="closeForgotPasswordPage"
            android:id="@+id/btn_closeEmailIntent"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:background="@color/colorRose"
            android:text="@string/registrationUser_negativeButton" />



    </LinearLayout>

</LinearLayout>