<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:weightSum="13"
    android:background="@mipmap/sky"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="28"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/envelope_email"
            android:background="@color/colorBlue"
            />

        <EditText
            android:id="@+id/login_email_et"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:background="@color/colorBlue"
            android:hint="@string/login_hintEditTextAndToast"
            android:textColorHint="@color/colorGrey" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/delete_email"
            android:onClick="clearEmailPasswordFilds_EditText"
            android:background="@color/colorBlue"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="28"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/lock_password"
            android:background="@color/colorBlue"
            />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:background="@color/colorBlue"
            android:hint="@string/password_hintEditTextAndToast"
            android:textColorHint="@color/colorGrey"
            android:inputType="textPassword"
            />

        <ImageView
            android:id="@+id/login_password_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/eye_password_close"
            android:background="@color/colorBlue"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:background="@color/colorRose"
        android:textSize="18dp"
        android:text="@string/signIn"
        android:onClick="signInAccount"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"
        android:text="@string/forget_password"
        android:onClick="forgotAndGiveNewPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="Չուն՞եք հաշիվ - "
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_account"
            android:onClick="registrationNewUser"
            />

    </LinearLayout>

</LinearLayout>
